--- a/vignettes/syllabus.Rmd
+++ b/vignettes/syllabus.Rmd
@@ -37,7 +37,7 @@ clark.rushing@uga.edu
 Dr. Heather Gaya  
 heather.gaya@uga.edu  
 **Office**: Warnell 3-410   
-**Office hours**: TBD  
+**Office hours**: Friday 10:00 - 11:00 or by appointment  
 
 # COURSE DESCRIPTION
 
@@ -107,7 +107,7 @@ Materials for labs will be provided as HTML and R Markdown files on the course w
 
 ## Software
 
-All lab computers will have R and RStudio installed on them so students are not required to install software on their own computers. However, students are free to use their own laptops during lab and having R and RStudio installed will make it easier to complete lab assignments outside of class. Any students wishing to use their own computers **should have R, RStudio, and JAGS installed and running prior to the first lab**. Detailed instructions for installing R and RStudio can be found [here](http://stat545.com/block000_r-rstudio-install.html). JAGS can be downloaded [here](https://sourceforge.net/projects/mcmc-jags/files/). 
+All lab computers will have R and RStudio installed on them so students are not required to install software on their own computers. However, students are free to use their own laptops during lab and having R and RStudio installed will make it easier to complete lab assignments outside of class. Any students wishing to use their own computers **should have R, RStudio, and Nimble installed and running prior to the first lab**. Detailed instructions for installing R and RStudio can be found [here](http://stat545.com/block000_r-rstudio-install.html). 
 
 If you plan to use your own computer, **be sure you have the most recent versions of all three software programs installed**. This will greatly decrease the chances of running to issue running the code I will provide in lab. Prior to the start of the semester, test that you have R and RStudio installed correctly by doing the following: 
 
@@ -127,11 +127,9 @@ We realize that many students have field work obligations during the spring seme
 
 # GRADING
 
-Your grade in the course will be based on a total of 200 possible points. Thirty five percent of your grade (70 points) will come from 7 homework assignments. Twenty five percent of your grade (50 points) will come from a midterm exam covering the topics we discuss in lecture during the first half of the semester. The final 40% (80 points) will be based on an individual project due at the end of the semesters.
+Your grade in the course will be based on a total of 200 possible points. Your entire grade will come from homework assignments. 
  
-The 7 homework assignments will build on concepts and skills that we cover in lecture and lab. Specific objectives and tasks for each assignment, along with any necessary data, will be posted on the course website. In general, students will be provided with ‘raw’ data and will need to clean/prepare (and document!) data prior to analysis. Each assignment will be due before class the week after the assignment is posted. All assignments must be prepared as R Markdown files that include all text, code, model output, and figures necessary to fully document your work and conclusions (we will spend the first several labs going over preparation of reports using R Markdown so, again, no previous experience is necessary). See [here](https://rushinglab.github.io/WILD8370/articles/homework.html) for instructions on submitting assignment
-
-Individual projects may address an ecological question of your choosing, but must be approved by me during the first half of the semester. You are free to use any data you have access to, including data from your own projects, published datasets, or even simulated data. Once the project topic and data are approved, you are expected to develop statistical models using the tools and skill gained during the semester to gain insights into the ecological processes that generated your data. Once completed, a final report should be prepared as if you were submitting the results to a short-format scientific journal. Additionally, you will give a short oral presentation of your results during the final week of class as if you were presenting at a professional conference. Later in the semester, I will provide a rubric for how the written and oral reports will be assessed. 
+These homework assignments will build on concepts and skills that we cover in lecture and lab. Specific objectives and tasks for each assignment, along with any necessary data, will be posted on the course website. In general, students will be provided with ‘raw’ data and will need to clean/prepare (and document!) data prior to analysis. Each assignment will be due before class the week after the assignment is posted. All assignments must be prepared as R Markdown files that include all text, code, model output, and figures necessary to fully document your work and conclusions (we will spend the first several labs going over preparation of reports using R Markdown so, again, no previous experience is necessary). See [here](https://rushinglab.github.io/WILD8370/articles/homework.html) for instructions on submitting assignment
 
 
 # GRADING SCALE
