Slowly building up lectures

--- a/docs/articles/lectures/00_course_intro/00_course_intro.Rmd
+++ b/docs/articles/lectures/00_course_intro/00_course_intro.Rmd
@@ -15,6 +15,7 @@ output:
 ```{r setup, echo = FALSE, include=FALSE}
 options(htmltools.dir.version = FALSE)
 source(here::here("R/zzz.R"))
+library(WILD8370)
 # library(gganimate)
 ```
 
