--- a/vignettes/schedule.Rmd
+++ b/vignettes/schedule.Rmd
@@ -62,10 +62,10 @@ schedule <- data.frame(WK = c("1", "", "",
       "", "", "", #16
       ""), 
                        Lab = c("", "Using R Markdown/Common Mathematical Notation", "",
-                               "", "Data simulation techniques/Common distributions", "", 
-                               "", "Regression analysis using Nimble", "",
-                               "", "Building a simple MCMC", "", 
-                               "", "Lab 5", "", 
+                               "", "Data simulation techniques", "", 
+                               "", "Lab 3", "",
+                               "", "Regression analysis using Nimble", "", 
+                               "", "Choosing Priors", "", 
                                "", "Lab 6", "", 
                                "", "Solving Nimble errors", "", 
                                "", "Lab 8", "",
