--- a/vignettes/homework.Rmd
+++ b/vignettes/homework.Rmd
@@ -47,3 +47,6 @@ All homework assignments for this course will be completed R Markdown files. To 
 4b) Once you know your file can be rendered, upload **both** the `LastnameFirstname-homework#.Rmd` *and* the `LastnameFirstname-homework#.html` files to eLC under the correct assignment folder
 
 **Assignments that fail to follow this instructions will not be graded**
+
+## Notes:
+Homework is graded on a complete/incomplete basis based on effort. If you find the homework too difficult or you encounter an error you cannot solve, write down what the problem is, what you've tried, and why those solutions didn't work. Homework that is not fully answered but has a detailed explanation of the steps you tried to solve the issue will be given full credit and will help us understand where we need to focus for future lectures. 
