Hmm it still shows up weird on the site

--- a/vignettes/Lab2_simulation.Rmd
+++ b/vignettes/Lab2_simulation.Rmd
@@ -4,7 +4,7 @@ output:
   rmarkdown::html_vignette:
     keep_md: yes
 vignette: >
-  %\VignetteIndexEntry{Lab01b_Mathematical_Notation}
+  %\VignetteIndexEntry{Lab2_simulation}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
