--- a/vignettes/Lab2_simulation.Rmd
+++ b/vignettes/Lab2_simulation.Rmd
@@ -312,6 +312,6 @@ sim_df <- readRDS("data/sim_seed_counts.rds")
 
 1.  We are performing a study on deer with CWD and want to simulate 20 years of abundance data on a declining population. We have a general sense that the population is declining by an average of 5% each year (e.g. $E(N_{t+1}) = N_t\lambda_t$), but the realized population has some stochasticity ($N_{t+1} \sim Pois(E(N_{t+1}))$). The population in year 1 is 475 deer. Write out a simulation for this data and use ggplot to visualize the realized population values across 20 years. Use the set.seed() command to make it reproducible.
 
-2.  We decide to add more complexity to our simulation and have $\lambda_t$ vary by time. We think lambda might have a positive connection to the degree days (daily average number of degrees above 4 C) in December of each year (e.g. $\lambda_t = exp(l_0 + l_1*degreedays)$. Using the 'Weather_data' provided in the WILD8370 package (accessed via: data(Weather_data) ), simulate 20 years of population abundance. Be sure to choose reasonable values for $l_0$ and $l_1$ so that $\lambda_t$ stays between ## and ##. Don't forget to scale the covariate! Use ggplot to visualize the realized population values across 20 years. 
+2.  We decide to add more complexity to our simulation and have $\lambda_t$ vary by time. Our real data were collected between 1994 and 2016, so we'll use environmental data from that time period. We think lambda might have a positive relationship with the degree days (daily average number of degrees above 4 C) in December of each year (e.g. $\lambda_t = exp(l_0 + l_1*degreedays)$. Using the 'Weather_data' provided in the WILD8370 package (accessed via: data(Weather_data) ), simulate 20 years of population abundance. Be sure to choose reasonable values for $l_0$ and $l_1$ so that $\lambda_t$ stays below 1.1 for all values of degree days. Don't forget to scale the covariate! Use ggplot to visualize the realized population values across 20 years. 
 
 3.  On a 1-10 scale, with 1 being the worst week ever and 10 being the best, how would you rate this week's content? What lingering questions/confusion about the lecture or lab do you still have?
