--- a/vignettes/schedule.Rmd
+++ b/vignettes/schedule.Rmd
@@ -63,7 +63,7 @@ schedule <- data.frame(WK = c("1", "", "",
       ""), 
                        Lab = c("", "Using R Markdown/Common Mathematical Notation", "",
                                "", "Data simulation techniques", "", 
-                               "", "Lab 3", "",
+                               "", "Basic MCMC", "",
                                "", "Regression analysis using Nimble", "", 
                                "", "Choosing Priors", "", 
                                "", "Lab 6", "", 
