--- a/vignettes/syllabus.Rmd
+++ b/vignettes/syllabus.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 Dr. Clark Rushing  
 clark.rushing@uga.edu  
 **Office**: Warnell 3-409   
-**Office hours**: TBD
+**Office hours**: Monday 1:30 - 3:00
 
 Dr. Heather Gaya  
 heather.gaya@uga.edu  
