Finished week 4 labs and lecture

--- a/vignettes/schedule.Rmd
+++ b/vignettes/schedule.Rmd
@@ -44,11 +44,11 @@ schedule <- data.frame(WK = c("1", "", "",
                               "17"),
                        Day = c(rep(c("M", "W", ""), 16), "M"),
                        Week = MW(first.day = "2025/01/06", last.day = "2025/04/28"),
-                       Lecture = c("Course introduction", "Introduction to statistics", "", #1
-      "Probability refresher", "Probability refresher", "", #2
-      "Principles of Bayesian inference", "Principles of Bayesian inference", "", #3
-      "Introduction to Linear Models and Nimble", "Introduction to Linear Models and Nimble", "", #4
-      "Random/fixed effects in linear models", "Informative Priors", "", #5
+                       Lecture = c("Course Introduction", "Introduction to Statistics", "", #1
+      "Probability Refresher", "Probability Refresher", "", #2
+      "Principles of Bayesian Inference", "Principles of Bayesian Inference", "", #3
+      "Introduction to Linear Models and Nimble", "Generalized Linear Model Review", "", #4
+      "Random/fixed effects in Linear models", "Informative Priors", "", #5
       "Observation error, intro to hierarchical models", "Observation error, intro to hierarchical models", "", #6
       "Estimating occupancy from presence/absence data", "Estimating occupancy from presence/absence data", "", #7
       "", "", "", #8 
