Adjusted for MLK day; added lecture 7

--- a/docs/articles/lectures/00_course_intro/00_course_intro.Rmd
+++ b/docs/articles/lectures/00_course_intro/00_course_intro.Rmd
@@ -80,7 +80,7 @@ class: inverse, center, middle
 **Practical advantages**  
 <br/>
 --
-1) Ability to develop custom/complex models to suite your needs  
+1) Ability to develop custom/complex models to suit your needs  
 <br/>
 
 --
